# ortex-test

./: .gitignore  README.md  part2.py  pyproject.toml
a/ortex-test/: README.md
docker/: docker-compose.yml
docker/init.d/: init.sh  init.sql
docker/scripts/: part1.sql
