[tool.poetry]
name = "ortex-test"
version = "0.1.0"
description = ""
authors = ["lemil <lemil77@gmail.com>"]
readme = "README.md"
packages = [{include = "ortex_test"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
pep8 = "^1.7.1"
pylint = "^2.17.4"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
